# strc

./: CMakeLists.txt  LICENSE  README.md  enum.hpp  format.hpp  strc.hpp  strc_base.hpp
example/: CMakeLists.txt  Makefile  README.md  main.cpp  strc.cpp  strc.json
tools/: make_strc.py
